# kata-wordsearch-cpp

./: CMakeLists.txt  main.cpp
src/: WordSearch.cpp  WordSearch.h
test/: WordSearchTest.cpp
